--- a/index.html
+++ b/index.html
@@ -2430,7 +2430,7 @@ ReactDOM.createRoot(document.getElementById("root")).render(<BudgetBuddy/>);
 // Register service worker
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/sw.js').catch(() => {});
+    navigator.serviceWorker.register('/budgetbuddy/sw.js').catch(() => {});
   });
 }
 </script>
