--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="theme-color" content="#FFB6C1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="BudgetBuddy">
-<title>BudgetBuddy 🌸</title>
+<meta name="apple-mobile-web-app-title" content="Spendora">
+<title>Spendora </title>
 <link rel="manifest" href="manifest.json">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
@@ -384,7 +384,7 @@ function SignInScreen({ isDark }) {
           WebkitBackgroundClip:"text",
           WebkitTextFillColor:"transparent",
           marginBottom:8,
-        }}>BudgetBuddy</h1>
+        }}>Spendora</h1>
         
         <p style={{
           fontFamily:"'Nunito',sans-serif",
@@ -395,7 +395,7 @@ function SignInScreen({ isDark }) {
           lineHeight:1.5,
         }}>
           Your personal spending tracker with<br/>
-          daily reminders & cloud sync ✨
+          daily reminders & calender sync ✨
         </p>
 
         {!isFirebaseConfigured && (
@@ -2038,7 +2038,7 @@ function BudgetBuddy() {
                 letterSpacing:2,
                 textTransform:"uppercase",
                 fontFamily:"'Nunito',sans-serif",
-              }}>BudgetBuddy 🌸</div>
+              }}>Spendora </div>
 
               <h1 style={{
                 margin:"4px 0 2px",
