--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@ input[type=number]::-webkit-inner-spin-button{display:none}
 const {useState,useEffect,useRef}=React;
 
 const firebaseConfig={
-  apiKey:"AIzaSyAyIwTNZB0mYWYPViDiHhYQsrc-DTyWmrk",
-  authDomain:"budgetbuddy-4168c.firebaseapp.com",
-  projectId:"budgetbuddy-4168c",
-  storageBucket:"budgetbuddy-4168c.firebasestorage.app",
-  messagingSenderId:"943210794388",
-  appId:"1:943210794388:web:88940dc98f36240ec7d381"
-};
+apiKey: "AIzaSyAyIwTNZB0mYWYPViDiHhYQsrc-DTyWmrk",
+  authDomain: "budgetbuddy-4168c.firebaseapp.com",
+  projectId: "budgetbuddy-4168c",
+  storageBucket: "budgetbuddy-4168c.firebasestorage.app",
+  messagingSenderId: "943210794388",
+  appId: "1:943210794388:web:88940dc98f36240ec7d381"};
 
 let auth,db;
 try{
