Update Firebase configuration with new credentials

--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@ const { useState, useEffect, useCallback, useRef } = React;
    FIREBASE CONFIG
 ══════════════════════════════════════════════════════════════════ */
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY_HERE",
-  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_PROJECT_ID.appspot.com",
-  messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyAyIwTNZB0mYWYPViDiHhYQsrc-DTyWmrk",
+  authDomain: "budgetbuddy-4168c.firebaseapp.com",
+  projectId: "budgetbuddy-4168c",
+  storageBucket: "budgetbuddy-4168c.firebasestorage.app",
+  messagingSenderId: "943210794388",
+  appId: "1:943210794388:web:88940dc98f36240ec7d381",
+  measurementId: "G-6PPJB2CLZJ"
 };
 
 let auth, db, isFirebaseConfigured = false;
